@@ -1,3 +1,10 @@
+Thu Jul 13 18:15:00 BST 2000 Olly Betts
+
+	* omega: tweaked log format; don't calculate topdoc if we're only
+	  going to throw away the answer; percentage scores now reach 100%
+	  when all terms match top document; fixed record to field
+	  splitting; created omega/README; miscellaneous fettling
+
 Wed Jul 12 15:57:00 BST 2000 Olly Betts
 
 	* omega: removed some unused system headers
